--- a/stemnleafplot/slplot_uniquewords_allstatements-Copy1.ipynb
+++ b/stemnleafplot/slplot_uniquewords_allstatements-Copy1.ipynb
@@ -629,11 +629,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'minnesota': ['minnesota'], 'race': ['race', 'races', 'grace'], 'pursuit': ['pursuit'], 'color': ['color', 'colour'], 'underrepresent': ['underrepresented'], 'equality': ['equality', 'quality', 'equity', 'inequality'], 'slavery': ['slavery'], 'system': ['systems', 'system', 'systemic'], 'criminal': ['criminal', 'criminals'], 'represent': ['represents', 'represent', 'present', 'representing', 'represented'], 'video': ['video', 'videos'], 'arrest': ['arrest', 'arrested'], 'victim': ['victims', 'victim'], 'inequity': ['inequity', 'equity', 'inequality'], 'kneel': ['kneel', 'kneels', 'knee'], 'inclusive': ['inclusive', 'inclusivevt'], 'unarm': [], 'recently': ['recently', 'recent'], 'live': ['live', 'lived', 'lives', 'alive'], 'frustration': ['frustration', 'frustrations'], 'inequality': ['inequality', 'equality', 'inequity'], 'condolences': ['condolences'], 'advocacy': ['advocacy'], 'die': ['die', 'died', 'dies'], 'blacklivesmatter': ['blacklivesmatter'], 'unrest': ['unrest'], 'skin': ['skin', 'sin'], 'suffer': ['suffer', 'suffered'], 'hurt': ['hurt', 'hurts'], 'problem': ['problems', 'problem'], 'black': ['black', 'blacks', 'lack', 'back'], 'unprecedented': ['unprecedented'], 'civil': ['civil'], 'grief': ['grief'], 'respect': ['respect', 'respects', 'respected'], 'struggle': ['struggle', 'struggles', 'struggled'], 'identity': ['identity', 'identify'], 'life': ['life'], 'tragedy': ['tragedy'], 'privilege': ['privileged', 'privilege', 'privileges'], 'post': ['post', 'posts', 'posit'], 'action': ['action', 'actions', 'reaction', 'inaction', 'fraction'], 'social': ['social', 'socially', 'societal'], 'death': ['death', 'deaths'], 'antiracist': ['antiracist', 'antiracism'], 'hate': ['hate'], 'protest': ['protests', 'protest', 'protect', 'protested'], 'commitment': ['commitment', 'commitments', 'recommitment'], 'past': ['past', 'pat'], 'anger': ['anger', 'danger'], 'violent': ['violent', 'violently'], 'shoot': ['shot'], 'government': ['government'], 'activity': ['activity'], 'value': ['values', 'value', 'valued'], 'historically': ['historical', 'historically'], 'officer': ['officer', 'officers', 'office', 'offices'], 'injustice': ['injustice', 'injustices', 'justice'], 'right': ['rights', 'right', 'bright', 'wright'], 'sadness': ['sadness'], 'case': ['case', 'chase', 'cease', 'cause', 'cases'], 'demonstration': ['demonstrations', 'demonstration', 'demonstrating'], 'respectful': ['respectful', 'respectfully'], 'loss': ['loss', 'los'], 'discrimination': ['discrimination', 'nondiscrimination', 'discriminatory'], 'minority': ['minority'], 'fear': ['fear', 'far', 'ear', 'fears'], 'force': ['force', 'forces', 'forced', 'fore'], 'asian': ['asian'], 'policy': ['policy'], 'urgent': ['urgent', 'urgently'], 'voice': ['voices', 'voice', 'vice'], 'american': ['americans', 'america', 'american'], 'african': ['african'], 'issue': ['issues', 'issued', 'issue'], 'murder': ['murder', 'murders', 'murdered'], 'angry': ['angry'], 'challenge': ['challenges', 'challenge', 'challenged'], 'aware': ['aware'], 'vulnerable': ['vulnerable'], 'threat': ['threat', 'treat', 'threats', 'threaten'], 'minneapolis': ['minneapolis'], 'kill': ['kill'], 'crisis': ['crisis'], 'vandalism': ['vandalism', 'vandals'], 'memory': ['memory', 'emory'], 'ethnicity': ['ethnicity'], 'mourn': ['mourn', 'mourns'], 'humanity': ['humanity'], 'unjust': ['unjust', 'unjustly'], 'oppression': ['oppression'], 'success': ['success', 'successes'], 'pandemic': ['pandemic', 'pandemics'], 'pain': ['pain', 'paint', 'pains'], 'white': ['white'], 'movement': ['movement', 'moment']}\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Import all of the statements from the tokenText folder and extract the derivatives of root words\n",
@@ -681,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -808,102 +816,102 @@
       "\n",
       "\u001b[1m                     Root and Leaf Plot                     \n",
       "\n",
-      "\u001b[1mmurder\u001b[0m| murder murders\n",
-      "\u001b[1mcase\u001b[0m| case\n",
-      "\u001b[1maware\u001b[0m| aware\n",
-      "\u001b[1marrest\u001b[0m| arrest\n",
-      "\u001b[1mshoot\u001b[0m| \n",
-      "\u001b[1mrepresent\u001b[0m| represents represent\n",
-      "\u001b[1mprotest\u001b[0m| protests protest\n",
-      "\u001b[1mdie\u001b[0m| die\n",
-      "\u001b[1mwhite\u001b[0m| white\n",
-      "\u001b[1midentity\u001b[0m| identity\n",
-      "\u001b[1mprivilege\u001b[0m| privileged privilege privileges\n",
-      "\u001b[1mrecently\u001b[0m| recently\n",
-      "\u001b[1mminneapolis\u001b[0m| minneapolis\n",
-      "\u001b[1mgovernment\u001b[0m| government\n",
-      "\u001b[1mafrican\u001b[0m| african\n",
-      "\u001b[1mskin\u001b[0m| skin\n",
-      "\u001b[1minequality\u001b[0m| inequality\n",
-      "\u001b[1mcommitment\u001b[0m| commitment commitments recommitment\n",
-      "\u001b[1mblacklivesmatter\u001b[0m| blacklivesmatter\n",
-      "\u001b[1mofficer\u001b[0m| officer officers office\n",
-      "\u001b[1mcondolences\u001b[0m| condolences\n",
-      "\u001b[1mkill\u001b[0m| kill\n",
-      "\u001b[1mvideo\u001b[0m| video videos\n",
-      "\u001b[1msocial\u001b[0m| social\n",
-      "\u001b[1mdeath\u001b[0m| death deaths\n",
-      "\u001b[1mstruggle\u001b[0m| struggle struggles struggled\n",
-      "\u001b[1mhurt\u001b[0m| hurt\n",
-      "\u001b[1mdiscrimination\u001b[0m| discrimination nondiscrimination\n",
-      "\u001b[1mblack\u001b[0m| black blacks\n",
-      "\u001b[1mthreat\u001b[0m| threat treat threats\n",
-      "\u001b[1mlife\u001b[0m| life\n",
-      "\u001b[1msuccess\u001b[0m| success\n",
-      "\u001b[1mactivity\u001b[0m| activity\n",
-      "\u001b[1munprecedented\u001b[0m| unprecedented\n",
-      "\u001b[1mfear\u001b[0m| fear\n",
-      "\u001b[1mdemonstration\u001b[0m| demonstrations demonstration demonstrating\n",
-      "\u001b[1manger\u001b[0m| anger danger\n",
-      "\u001b[1mvalue\u001b[0m| values value valued\n",
-      "\u001b[1minjustice\u001b[0m| injustice injustices\n",
-      "\u001b[1minequity\u001b[0m| inequity\n",
-      "\u001b[1mvulnerable\u001b[0m| vulnerable\n",
-      "\u001b[1mrespectful\u001b[0m| respectful respectfully\n",
-      "\u001b[1mmourn\u001b[0m| mourn mourns\n",
-      "\u001b[1maction\u001b[0m| action actions\n",
-      "\u001b[1mmemory\u001b[0m| memory emory\n",
-      "\u001b[1mvoice\u001b[0m| voices voice\n",
-      "\u001b[1mamerican\u001b[0m| americans america american\n",
-      "\u001b[1munderrepresent\u001b[0m| underrepresented\n",
-      "\u001b[1moppression\u001b[0m| oppression\n",
       "\u001b[1mminnesota\u001b[0m| minnesota\n",
-      "\u001b[1mright\u001b[0m| rights right bright wright\n",
-      "\u001b[1mcriminal\u001b[0m| criminal criminals\n",
-      "\u001b[1mproblem\u001b[0m| problems problem\n",
-      "\u001b[1mvandalism\u001b[0m| vandalism\n",
-      "\u001b[1mpain\u001b[0m| pain\n",
-      "\u001b[1mkneel\u001b[0m| kneel kneels\n",
-      "\u001b[1mrace\u001b[0m| race\n",
+      "\u001b[1mrace\u001b[0m| race races grace\n",
       "\u001b[1mpursuit\u001b[0m| pursuit\n",
-      "\u001b[1mfrustration\u001b[0m| frustration frustrations\n",
-      "\u001b[1murgent\u001b[0m| urgent\n",
-      "\u001b[1methnicity\u001b[0m| ethnicity\n",
-      "\u001b[1mrespect\u001b[0m| respect respects\n",
-      "\u001b[1mviolent\u001b[0m| violent\n",
-      "\u001b[1mforce\u001b[0m| force forces forced\n",
-      "\u001b[1mpost\u001b[0m| post\n",
-      "\u001b[1mpandemic\u001b[0m| pandemic pandemics\n",
-      "\u001b[1mhistorically\u001b[0m| historical historically\n",
-      "\u001b[1mchallenge\u001b[0m| challenges challenge challenged\n",
-      "\u001b[1mcivil\u001b[0m| civil\n",
-      "\u001b[1minclusive\u001b[0m| inclusive\n",
-      "\u001b[1mslavery\u001b[0m| slavery\n",
-      "\u001b[1missue\u001b[0m| issues issued issue\n",
-      "\u001b[1msuffer\u001b[0m| suffer\n",
-      "\u001b[1mloss\u001b[0m| loss\n",
-      "\u001b[1mpolicy\u001b[0m| policy\n",
-      "\u001b[1mtragedy\u001b[0m| tragedy\n",
-      "\u001b[1msystem\u001b[0m| systems system\n",
-      "\u001b[1mpast\u001b[0m| past\n",
-      "\u001b[1mminority\u001b[0m| minority\n",
       "\u001b[1mcolor\u001b[0m| color colour\n",
-      "\u001b[1mmovement\u001b[0m| movement\n",
-      "\u001b[1mhate\u001b[0m| hate\n",
-      "\u001b[1mequality\u001b[0m| equality quality\n",
+      "\u001b[1munderrepresent\u001b[0m| underrepresented\n",
+      "\u001b[1mequality\u001b[0m| equality quality equity inequality\n",
+      "\u001b[1mslavery\u001b[0m| slavery\n",
+      "\u001b[1msystem\u001b[0m| systems system systemic\n",
+      "\u001b[1mcriminal\u001b[0m| criminal criminals\n",
+      "\u001b[1mrepresent\u001b[0m| represents represent present representing represented\n",
+      "\u001b[1mvideo\u001b[0m| video videos\n",
+      "\u001b[1marrest\u001b[0m| arrest arrested\n",
       "\u001b[1mvictim\u001b[0m| victims victim\n",
-      "\u001b[1mgrief\u001b[0m| grief\n",
-      "\u001b[1mlive\u001b[0m| live\n",
-      "\u001b[1msadness\u001b[0m| sadness\n",
-      "\u001b[1madvocacy\u001b[0m| advocacy\n",
-      "\u001b[1munrest\u001b[0m| unrest\n",
-      "\u001b[1munjust\u001b[0m| unjust\n",
-      "\u001b[1masian\u001b[0m| asian\n",
-      "\u001b[1mhumanity\u001b[0m| humanity\n",
-      "\u001b[1mcrisis\u001b[0m| crisis\n",
-      "\u001b[1mangry\u001b[0m| angry\n",
+      "\u001b[1minequity\u001b[0m| inequity equity inequality\n",
+      "\u001b[1mkneel\u001b[0m| kneel kneels knee\n",
+      "\u001b[1minclusive\u001b[0m| inclusive inclusivevt\n",
       "\u001b[1munarm\u001b[0m| \n",
-      "\u001b[1mantiracist\u001b[0m| antiracist\n"
+      "\u001b[1mrecently\u001b[0m| recently recent\n",
+      "\u001b[1mlive\u001b[0m| live lived lives alive\n",
+      "\u001b[1mfrustration\u001b[0m| frustration frustrations\n",
+      "\u001b[1minequality\u001b[0m| inequality equality inequity\n",
+      "\u001b[1mcondolences\u001b[0m| condolences\n",
+      "\u001b[1madvocacy\u001b[0m| advocacy\n",
+      "\u001b[1mdie\u001b[0m| die died dies\n",
+      "\u001b[1mblacklivesmatter\u001b[0m| blacklivesmatter\n",
+      "\u001b[1munrest\u001b[0m| unrest\n",
+      "\u001b[1mskin\u001b[0m| skin sin\n",
+      "\u001b[1msuffer\u001b[0m| suffer suffered\n",
+      "\u001b[1mhurt\u001b[0m| hurt hurts\n",
+      "\u001b[1mproblem\u001b[0m| problems problem\n",
+      "\u001b[1mblack\u001b[0m| black blacks lack back\n",
+      "\u001b[1munprecedented\u001b[0m| unprecedented\n",
+      "\u001b[1mcivil\u001b[0m| civil\n",
+      "\u001b[1mgrief\u001b[0m| grief\n",
+      "\u001b[1mrespect\u001b[0m| respect respects respected\n",
+      "\u001b[1mstruggle\u001b[0m| struggle struggles struggled\n",
+      "\u001b[1midentity\u001b[0m| identity identify\n",
+      "\u001b[1mlife\u001b[0m| life\n",
+      "\u001b[1mtragedy\u001b[0m| tragedy\n",
+      "\u001b[1mprivilege\u001b[0m| privileged privilege privileges\n",
+      "\u001b[1mpost\u001b[0m| post posts posit\n",
+      "\u001b[1maction\u001b[0m| action actions reaction inaction fraction\n",
+      "\u001b[1msocial\u001b[0m| social socially societal\n",
+      "\u001b[1mdeath\u001b[0m| death deaths\n",
+      "\u001b[1mantiracist\u001b[0m| antiracist antiracism\n",
+      "\u001b[1mhate\u001b[0m| hate\n",
+      "\u001b[1mprotest\u001b[0m| protests protest protect protested\n",
+      "\u001b[1mcommitment\u001b[0m| commitment commitments recommitment\n",
+      "\u001b[1mpast\u001b[0m| past pat\n",
+      "\u001b[1manger\u001b[0m| anger danger\n",
+      "\u001b[1mviolent\u001b[0m| violent violently\n",
+      "\u001b[1mshoot\u001b[0m| shot\n",
+      "\u001b[1mgovernment\u001b[0m| government\n",
+      "\u001b[1mactivity\u001b[0m| activity\n",
+      "\u001b[1mvalue\u001b[0m| values value valued\n",
+      "\u001b[1mhistorically\u001b[0m| historical historically\n",
+      "\u001b[1mofficer\u001b[0m| officer officers office offices\n",
+      "\u001b[1minjustice\u001b[0m| injustice injustices justice\n",
+      "\u001b[1mright\u001b[0m| rights right bright wright\n",
+      "\u001b[1msadness\u001b[0m| sadness\n",
+      "\u001b[1mcase\u001b[0m| case chase cease cause cases\n",
+      "\u001b[1mdemonstration\u001b[0m| demonstrations demonstration demonstrating\n",
+      "\u001b[1mrespectful\u001b[0m| respectful respectfully\n",
+      "\u001b[1mloss\u001b[0m| loss los\n",
+      "\u001b[1mdiscrimination\u001b[0m| discrimination nondiscrimination discriminatory\n",
+      "\u001b[1mminority\u001b[0m| minority\n",
+      "\u001b[1mfear\u001b[0m| fear far ear fears\n",
+      "\u001b[1mforce\u001b[0m| force forces forced fore\n",
+      "\u001b[1masian\u001b[0m| asian\n",
+      "\u001b[1mpolicy\u001b[0m| policy\n",
+      "\u001b[1murgent\u001b[0m| urgent urgently\n",
+      "\u001b[1mvoice\u001b[0m| voices voice vice\n",
+      "\u001b[1mamerican\u001b[0m| americans america american\n",
+      "\u001b[1mafrican\u001b[0m| african\n",
+      "\u001b[1missue\u001b[0m| issues issued issue\n",
+      "\u001b[1mmurder\u001b[0m| murder murders murdered\n",
+      "\u001b[1mangry\u001b[0m| angry\n",
+      "\u001b[1mchallenge\u001b[0m| challenges challenge challenged\n",
+      "\u001b[1maware\u001b[0m| aware\n",
+      "\u001b[1mvulnerable\u001b[0m| vulnerable\n",
+      "\u001b[1mthreat\u001b[0m| threat treat threats threaten\n",
+      "\u001b[1mminneapolis\u001b[0m| minneapolis\n",
+      "\u001b[1mkill\u001b[0m| kill\n",
+      "\u001b[1mcrisis\u001b[0m| crisis\n",
+      "\u001b[1mvandalism\u001b[0m| vandalism vandals\n",
+      "\u001b[1mmemory\u001b[0m| memory emory\n",
+      "\u001b[1methnicity\u001b[0m| ethnicity\n",
+      "\u001b[1mmourn\u001b[0m| mourn mourns\n",
+      "\u001b[1mhumanity\u001b[0m| humanity\n",
+      "\u001b[1munjust\u001b[0m| unjust unjustly\n",
+      "\u001b[1moppression\u001b[0m| oppression\n",
+      "\u001b[1msuccess\u001b[0m| success successes\n",
+      "\u001b[1mpandemic\u001b[0m| pandemic pandemics\n",
+      "\u001b[1mpain\u001b[0m| pain paint pains\n",
+      "\u001b[1mwhite\u001b[0m| white\n",
+      "\u001b[1mmovement\u001b[0m| movement moment\n"
      ]
     }
    ],
