--- a/stemnleafplot/(original)_stemnleafplot.ipynb
+++ b/stemnleafplot/(original)_stemnleafplot.ipynb
@@ -2,9 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\manalais\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     C:\\Users\\manalais\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
@@ -22,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +88,7 @@
     "    wordnet_lemmatizer = WordNetLemmatizer()\n",
     "    lemmatized_words = []\n",
     "    sentence = nltk.pos_tag(sentence)   #find POS in the sentence\n",
+    "    print(sentence)\n",
     "    for word, tag in sentence:\n",
     "        if tag.startswith('NN' or 'NNS' or 'NNP' or 'NNPS'):\n",
     "            lemmatized_words.append(wordnet_lemmatizer.lemmatize(word, pos='n'))\n",
