edited the md document

--- a/stemnleafplot/slplot-diversity-statements.ipynb
+++ b/stemnleafplot/slplot-diversity-statements.ipynb
@@ -176,7 +176,7 @@
     "    sys.stdout = file \n",
     "    print(\"**\" + \"Root and Leaf Plot\" + \"**\" + \"\\n\")\n",
     "    for root,leaves in roots_and_leaves.items():\n",
-    "        print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"\\\")      \n",
+    "        print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"  \")      \n",
     "    sys.stdout = original_stdout # Reset the standard output to its original value"
    ]
   },
