adding READNE.md file and arranging all of the files in the stemnleaf folder

--- a/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
+++ b/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
@@ -12,24 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from nltk.tag import pos_tag\n",
-    "from nltk.corpus import wordnet\n",
     "import os\n",
     "import sys\n",
     "import json \n",
-    "from collections import OrderedDict \n",
-    "from nltk.stem import WordNetLemmatizer"
+    "from nltk.tag import pos_tag\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "tokenizer = nltk.RegexpTokenizer(r\"\\w+\")  # Removes all punctuation marks in the text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -40,8 +38,6 @@
     "'''\n",
     "\n",
     "tokenized_statements = []\n",
-    "\n",
-    "tokenizer = nltk.RegexpTokenizer(r\"\\w+\")  # Removes all punctuation marks in the text\n",
     "textdir = (r\"C:\\Users\\manalais\\decode-diversity-statements\\texts\")\n",
     "for filename in os.listdir(textdir)[:]:\n",
     "    filepath = os.path.join(textdir, filename)\n",
@@ -54,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +155,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Write dictionary to a text file'''\n",
+    "'''Print the output'''\n",
+    "print(\"\\n\" + \"\\033[1m\" + \"Root and Leaf Plot\".center(60) + \"\\n\")\n",
+    "for root,leaves in roots_and_leaves.items():\n",
+    "    print(\"\\033[1m\" + root + \"\\033[0m\" + '| ' + \" \".join(leaves)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''(Option 1) Write dictionary to a text file'''\n",
     "with open(\"stemnleaf.json\", \"w\") as file:  \n",
     "    json.dump(roots_and_leaves, file) "
    ]
@@ -170,13 +178,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Visualize the data and save it as Markdown document'''\n",
+    "'''(Option 2) Visualize the data and save it as Markdown document'''\n",
     "\n",
     "with open('stemnleafplot.md', 'w') as file:\n",
     "    sys.stdout = file \n",
     "    print(\"**\" + \"Root and Leaf Plot\" + \"**\" + \"\\n\")\n",
     "    for root,leaves in roots_and_leaves.items():\n",
-    "        print(\"**\" + root + \"**\" + '| ' + \" \".join(leaves))      \n",
+    "        print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"   \")      \n",
     "    sys.stdout = original_stdout # Reset the standard output to its original value"
    ]
   },
@@ -186,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Visualize the data and save it as txt.file'''\n",
+    "'''(Option 3) Visualize the data and save it as txt.file'''\n",
     "\n",
     "with open('stemnleafplot.txt', 'w') as file:\n",
     "    sys.stdout = file \n",
