--- a/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
+++ b/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,12 +180,11 @@
    "source": [
     "'''(Option 2) Visualize the data and save it as Markdown document'''\n",
     "\n",
-    "with open('stemnleafplot.md', 'w') as file:\n",
-    "    sys.stdout = file \n",
-    "    print(\"**\" + \"Root and Leaf Plot\" + \"**\" + \"\\n\")\n",
-    "    for root,leaves in roots_and_leaves.items():\n",
-    "        print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"   \")      \n",
-    "    sys.stdout = original_stdout # Reset the standard output to its original value"
+    "sys.stdout = open(r'C:\\Users\\manalais\\decode-diversity-statements\\stemnleafplot\\stemnleafplot.md', 'w')\n",
+    "print(\"**\" + \"Root and Leaf Plot\" + \"**\" + \"\\n\")\n",
+    "for root,leaves in roots_and_leaves.items():\n",
+    "    print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"   \")      \n",
+    "sys.stdout.close()"
    ]
   },
   {
@@ -196,12 +195,11 @@
    "source": [
     "'''(Option 3) Visualize the data and save it as txt.file'''\n",
     "\n",
-    "with open('stemnleafplot.txt', 'w') as file:\n",
-    "    sys.stdout = file \n",
-    "    print(\"Root and Leaf Plot\" + \"\\n\")\n",
-    "    for root,leaves in roots_and_leaves.items():\n",
-    "        print(root + '| ' + \" \".join(leaves))      \n",
-    "    sys.stdout = original_stdout # Reset the standard output to its original value"
+    "sys.stdout = open(r'C:\\Users\\manalais\\decode-diversity-statements\\stemnleafplot\\stemnleafplot.txt', 'w')\n",
+    "print(\"Root and Leaf Plot\" + \"\\n\")\n",
+    "for root,leaves in roots_and_leaves.items():\n",
+    "    print(root + '| ' + \" \".join(leaves))      \n",
+    "sys.stdout.close()"
    ]
   },
   {
