--- a/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
+++ b/stemnleafplot/finalversion-stemnleafplot/stemnleafplot.ipynb
@@ -183,7 +183,7 @@
     "sys.stdout = open(r'C:\\Users\\manalais\\decode-diversity-statements\\stemnleafplot\\stemnleafplot.md', 'w')\n",
     "print(\"**\" + \"Root and Leaf Plot\" + \"**\" + \"\\n\")\n",
     "for root,leaves in roots_and_leaves.items():\n",
-    "    print(\"**\" + root + \"**\" + \"|   \" + \" \".join(leaves) + \"   \")      \n",
+    "    print(\"**\" + root + \"**\" + \"|\" + \"  \" + \" \".join(leaves) + \"   \")      \n",
     "sys.stdout.close()"
    ]
   },
